--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ body {
 }
 .content-now {
     flex: 5;
-    background-image: url('/assets/images/bg-today-large.svg');
+    background-image: url('./assets/images/bg-today-large.svg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
