--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
 
 @font-face {
     font-family: Bricolage_grotesque;
-    src: url(/assets/fonts/Bricolage_Grotesque/BricolageGrotesque-VariableFont_opsz\,wdth\,wght.ttf);
+    src: url('assets/fonts/Bricolage_Grotesque/BricolageGrotesque-VariableFont_opsz\,wdth\,wght.ttf');
 }
 @font-face {
     font-family: Dm_sans;
-    src: url(/assets/fonts/DM_Sans/DMSans-VariableFont_opsz\,wght.ttf);
+    src: url('assets/fonts/DM_Sans/DMSans-VariableFont_opsz\,wght.ttf');
 }
 body {
     background-color: #03012dff;
@@ -229,7 +229,7 @@ body {
 }
 .content-now {
     flex: 5;
-    background-image: url('./assets/images/bg-today-large.svg');
+    background-image: url('assets/images/bg-today-large.svg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
