Enhance button toggle functionality and improve active button styling

--- a/style.css
+++ b/style.css
@@ -122,7 +122,8 @@ body {
 .temp_button .check{
     display: none;
 }
-.temp_button.active .check {
+.temp_button.active .check {    
+    background-color: #312f4bff;
     display: block;    
     align-self: center;
 }
@@ -130,6 +131,7 @@ body {
     display: none;
 }
 .speed_button.active .check {
+    background-color: #312f4bff;
     display: block;    
     align-self: center;
 }
@@ -137,6 +139,7 @@ body {
     display: none;
 }
 .prec_button.active .check {
+    background-color: #312f4bff;
     display: block;    
     align-self: center;
 }
