--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body {
     width: 40%;
     margin-top: 50px;  
     margin-bottom: 50px;
-    height: 60px;
+    height: 50px;
 }
 .search_input {
     flex: 7;
@@ -168,8 +168,10 @@ body {
 
 }
 .search_input img {
-    margin: 18px;
-    margin-left: 30px;
+    height: 50%;
+    margin-left: 15px;
+    margin-right: 10px;
+    align-self: center;
 }
 .search_input input {
     width: 100%;
@@ -256,15 +258,15 @@ body {
 }
 .content-detail div h1{
     margin-left: 30px;    
-    font-size: 20px;
+    font-size: 100%;
     color: #aeaeb7ff;
     margin-top: 20px;
 }
 .content-detail div p{
     margin-left: 30px;
-    font-size: 50px;
+    font-size: 200%;
     color: #ffffff;
-    margin: 10px 0 0 30px;
+    margin: 0 0 20px 30px;
 }
 
 .content-daily {
