--- a/style.css
+++ b/style.css
@@ -261,6 +261,7 @@ body {
     border-radius: 20px;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 .city_selected {
     font-family: Dm_sans;
