--- a/style.css
+++ b/style.css
@@ -272,11 +272,28 @@ body {
     gap: 10px;
     margin-left: 30px;
 }
+#now-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10px;
+}
+
 .city_selected {
     font-family: Dm_sans;
     font-size: 25px;
     font-weight: 500;
     color: #ffffff;
+    padding: 0;
+    margin: 0;
+}
+.date {
+    font-family: Dm_sans;
+    font-size: 15px;
+    font-weight: 400;
+    color: #aeaeb7ff;
+    margin-top: -10px;
 }
 .flag {
     height: 40px;
